<resources>

    <string name="app_name">O Caminho das Pedras</string>

    <!--
        Login Screen
    -->
    <string name="email_login">E-mail</string>
    <string name="password_login">Senha</string>
    <string name="sing_in_button_login">Entrar</string>
    <string name="sing_up_button_login">Cadastre-se</string>
    <string name="forgot_password_login">Esqueci a Senha</string>

    <!--
        Sign Up Cycle
    -->
    <string name="email_sign_up">E-mail</string>
    <string name="password_sign_up">Senha</string>
    <string name="birth_date_sign_up">Data de Nascimento</string>
    <string name="terms_of_use_sign_up">Concordo com os Termos de Uso de Dados</string>
    <string name="register_button_sign_up">Cadastrar</string>
    <string name="back_button_sign_up">Voltar</string>
    <string name="finished_message_sign_up">Cadastro Realizado!</string>
    <string name="beginning_button_sign_up">Inicio</string>

    <!--
        Forgot Password Cycle
    -->
    <string name="title_forgot_password">Esqueci a Senha</string>

    <string name="email_forgot_password">E-mail</string>
    <string name="send_confirmation_code_button_forgot_password">Enviar Código</string>
    <string name="back_button_forgot_password">Voltar</string>

    <string name="confirmation_code_forgot_password">Código de Verificação</string>
    <string name="new_password_forgot_password">Nova senha</string>
    <string name="confirm_password_forgot_password">Confirmação de Senha</string>
    <string name="change_password_button_forgot_password">Alterar Senha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title_sign_up">Cadastre-se</string>
    <string name="email_required">E-mail obrigatório</string>
    <string name="password_required">Senha obrigatória!</string>
    <string name="invalid_email">E-mail inválido!</string>
    <string name="password_minimum_length">Tamanho mínimo de senha: 8 caracteres</string>
    <string name="login_invalid_credentials">Usuário ou senha inválidos</string>
    <string name="login_user_disabled">Usuário desabilitado</string>
    <string name="login_user_not_found">Conta não encontrada para o e-mail informado</string>
    <string name="login_generic_error">Não foi possível efetuar login. Por favor verifique os dados</string>
    <string name="password_check_not_equal">Senha e Confirmação são diferentes!</string>


</resources>