<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="fragment"
            type="br.com.ocaminhodaspedras.ui.fragment.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">


        <TextView
            android:id="@+id/tvRegisterTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/register_title_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/etEmailSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEmailSignUp"
            style="@style/TextAppearance.AppCompat.Body1.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:ems="10"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/etPasswordSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPasswordSignUp"
            style="@style/TextAppearance.AppCompat.Body1.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:ems="10"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tdDateOfBirthSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/tdDateOfBirthSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth_date_sign_up"
            android:inputType="date"
            android:layout_marginBottom="35dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/cbTermsOfUseSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/cbTermsOfUseSignUp"
            style="@style/LittleRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_sign_up"
            android:layout_marginBottom="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btRegisterSignUp"/>

        <Button
            android:id="@+id/btRegisterSignUp"
            style="?primaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/register_button_sign_up"
            app:layout_constraintBottom_toTopOf="@id/btBackSignUp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btBackSignUp"
            style="?primaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back_button_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="43dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>