<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVQuarterForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVHalfForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVThreeQuartersForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHHalfForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvTitleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_forgot_password"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailForgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/glVThreeQuartersForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/glVQuarterForgotPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_forgot_password"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btForgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/glVThreeQuartersForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/glVQuarterForgotPassword" />

    <Button
        android:id="@+id/btForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/btBackForgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/glVThreeQuartersForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/glVQuarterForgotPassword" />

    <Button
        android:id="@+id/btBackForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glVThreeQuartersForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/glVQuarterForgotPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>